some jpackage plays